updates to start getting the user to place their pieces

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
         <option value="2">2</option>
       </select>
       <br/>
-      <button onClick="">Start New Game</button>
-
+      <button onClick="setupGame()">Start New Game</button>
+      <div id="messageCenter"></div>
     </div>
     <div class="gameArea" >
         <div>Player 2 Board</div>
