updates working on updates for setting pieces and telling placement

--- a/index.html
+++ b/index.html
@@ -336,35 +336,35 @@
           <tr>
             <td>1</td>
             <td>
-              <a href="/wiki/Aircraft_carrier" title="Aircraft carrier">Carrier</a>
+              Carrier
             </td>
             <td style="text-align:center;">5</td>
           </tr>
           <tr>
             <td>2</td>
             <td>
-              <a href="/wiki/Battleship" title="Battleship">Battleship</a>
+              Battleship
             </td>
             <td style="text-align:center;">4</td>
           </tr>
           <tr>
             <td>3</td>
             <td>
-              <a href="/wiki/Cruiser" title="Cruiser">Cruiser</a>
+              Cruiser
             </td>
             <td style="text-align:center;">3</td>
           </tr>
           <tr>
             <td>4</td>
             <td>
-              <a href="/wiki/Submarine" title="Submarine">Submarine</a>
+              Submarine
             </td>
             <td style="text-align:center;">3</td>
           </tr>
           <tr>
             <td>5</td>
             <td>
-              <a href="/wiki/Destroyer" title="Destroyer">Destroyer</a>
+              Destroyer
             </td>
             <td style="text-align:center;">2</td>
           </tr>
