getting multiple player entry together and adding maybe up to x players for player planning

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <option value="2">2</option>
       </select>
       <br/>
-      <button onClick="setupGame()">Start New Game</button>
+      <button onClick="setupGame(event)">Start New Game</button>
       <div id="messageCenter"></div>
     </div>
     <div class="gameArea" >
